# hdiv

./: .gitignore  Cargo.toml  GEMINI.md  Project Structure.md  README.md
crates/hdim-core/: Cargo.toml
crates/hdim-core/src/: lib.rs  state.rs
crates/hdim-core/src/exif/: camera.rs  date_time.rs  exif_data.rs  exposure.rs  gps.rs  image.rs  lens.rs  mod.rs  util.rs
crates/hdim-core/tests/: resizing.rs
crates/hdim-render/: Cargo.toml
crates/hdim-render/src/: lib.rs
crates/hdim-render/tests/: complex_image.rs  image_file.rs  visuals.rs
crates/hdim-render/tests/snapshots/: image_file__render_real_image_snapshot_size_2.snap  image_file__render_real_image_snapshot_size_4.snap  image_file__render_real_image_snapshot_size_8.snap
crates/hdim-tui/: Cargo.toml
crates/hdim-tui/src/: app.rs  events.rs  main.rs  ui.rs
crates/hdim-tui/src/components/: crop.rs  exif_view.rs  mod.rs
crates/hdiv-core/: Cargo.toml
crates/hdiv-core/src/: lib.rs
crates/hdiv-core/tests/: resizing.rs
crates/hdiv-render/: Cargo.toml
crates/hdiv-render/src/: lib.rs
crates/hdiv-render/tests/: visuals.rs
crates/hdiv-render/tests/snapshots/: visuals__render_snapshot.snap
crates/hdiv-tui/: Cargo.toml
