[workspace]
members = [
    "crates/hdim-core",
    "crates/hdim-render",
    "crates/hdim-tui",
]
resolver = "2"

[workspace.dependencies]
# Graphics & Math
image = "0.25"
crossterm = "0.29"
ratatui = "0.30"
palette = "0.7.6"

# Error Handling & Utils
anyhow = "1.0"
thiserror = "1.0"
color-eyre = "0.6.5"

# Testing
insta = "1.34" # Essential for testing TUI/ANSI output