[package]
name = "hdim-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
hdim-core = { path = "../hdim-core", features = ["exif"] }
hdim-render = { path = "../hdim-render" }
ratatui.workspace = true
crossterm = { workspace = true }
anyhow = { workspace = true }
image = { workspace = true }
color-eyre = { workspace = true }
ansi-to-tui = { workspace = true }